--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,9 @@ name = "ImageReconstruction"
 uuid = "d5d0ac58-a118-45a5-925e-339d09fa0c5f"
 version = "0.1.0"
 
+[deps]
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+
 [compat]
 julia = "1"
 
